--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "./node_modules/.bin/jasmine-node ."
+    "test": "./node_modules/.bin/jasmine-node . --verbose"
   },
   "author": "",
   "license": "ISC"
